<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/websms_pref_category">

        <CheckBoxPreference
        android:key="enable_websms"
        android:title="@string/pref_enable_websms"
        android:defaultValue="true" />

        <ListPreference
            android:key="websms_name"
            android:title="@string/pref_websms_clients"
            android:defaultValue="-1"
            android:entries="@array/pref_web_sms_client_list_titles"
            android:entryValues="@array/pref_web_sms_client_list_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            />

        <EditTextPreference
            android:key="websms_username"
            android:title="@string/pref_websms_username"
            android:selectAllOnFocus="true"
            android:inputType="textCapWords"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1" />

        <EditTextPreference
            android:key="websms_password"
            android:title="@string/pref_websms_password"
            android:selectAllOnFocus="true"
            android:inputType="textPassword"
            />

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/sending_pref_category">

        <CheckBoxPreference
            android:key="request_delivery"
            android:title="@string/request_delivery"
            android:defaultValue="false"
            />

    </PreferenceCategory>

    <Preference
        android:title="@string/open_source_licenses"
        android:key="open_source_licenses"
        />

</PreferenceScreen>