<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="1"
        android:title="@string/menu_delete"
        android:icon="@mipmap/ic_action_delete"
        app:showAsAction="always"
        />

    <item
        android:orderInCategory="4"
        android:id="@+id/action_send_as_new"
        android:title="@string/send_as_new"
        android:icon="@mipmap/ic_action_resend"
        app:showAsAction="ifRoom"
        />

    <item
        android:orderInCategory="2"
        android:id="@+id/action_copy"
        android:title="@string/copy"
        android:icon="@mipmap/ic_action_copy"
        app:showAsAction="always"
        />

    <item
        android:orderInCategory="3"
        android:id="@+id/action_details"
        android:title="@string/details"
        android:icon="@mipmap/ic_action_info"
        app:showAsAction="ifRoom"
        />

</menu>