<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.steps.geosms.conversation.ConversationActivity;
    com.steps.geosms.conversationsList.ConversationsListActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never"
        />

    <item android:id="@+id/action_call" android:title="@string/action_call"
        android:icon="@mipmap/ic_call"
        android:orderInCategory="1" app:showAsAction="ifRoom"
        />

    <item android:id="@+id/people_in_this_conversation"
        android:title="@string/people"
        android:orderInCategory="10"
        />


</menu>
